crates/ty_python_semantic/resources/mdtest/snapshots/invalid.md_-_Tests_for_invalid_ty…_-_Multiple_starred_exp…_(3fbab22ead236138).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---

---
mdtest name: invalid.md - Tests for invalid types in type expressions - Multiple starred expressions in a `tuple` specialization
mdtest path: crates/ty_python_semantic/resources/mdtest/annotations/invalid.md
---

# Python source files

## mdtest_snippet.py

```
 1 | from typing import TypeVarTuple, Unpack
 2 | 
 3 | Ts = TypeVarTuple("Ts")
 4 | 
 5 | def f(
 6 |     # error: [invalid-type-form] "Multiple unpacked variadic tuples are not allowed in a `tuple` specialization"
 7 |     x: tuple[*tuple[int, ...], *tuple[str, ...]],
 8 |     # error: [invalid-type-form] "Multiple unpacked variadic tuples are not allowed in a `tuple` specialization"
 9 |     x2: tuple[Unpack[tuple[int, ...]], Unpack[tuple[str, ...]]],
10 |     y: tuple[*tuple[int, ...], str, int, *tuple[str, ...]],  # error: [invalid-type-form]
11 |     y2: tuple[Unpack[tuple[int, ...]], str, int, Unpack[tuple[str, ...]]],  # error: [invalid-type-form]
12 |     # Multiple unpacked elements are fine, as long as the unpacked elements are not variadic:
13 |     z: tuple[*tuple[int, ...], *tuple[str]],
14 |     z2: tuple[Unpack[tuple[int, ...]], Unpack[tuple[str]]],
15 | ):
16 |     reveal_type(x)  # revealed: tuple[int | str, ...]
17 |     reveal_type(x2)  # revealed: tuple[int | str, ...]
18 |     reveal_type(y)  # revealed: tuple[str | int, ...]
19 |     reveal_type(y2)  # revealed: tuple[str | int, ...]
20 |     reveal_type(z)  # revealed: tuple[*tuple[int, ...], str]
21 |     reveal_type(z2)  # revealed: tuple[*tuple[int, ...], str]
22 | 
23 | T1 = tuple[int, *Ts, str, *Ts]  # error: [invalid-type-form]
24 | 
25 | def func3(t: tuple[*Ts]):
26 |     t5: tuple[*tuple[str], *Ts]  # OK
27 |     t6: tuple[*tuple[str, ...], *Ts]  # error: [invalid-type-form]
```

# Diagnostics

```
error[invalid-type-form]: Multiple unpacked variadic tuples are not allowed in a `tuple` specialization
 --> src/mdtest_snippet.py:7:8
  |
7 |     x: tuple[*tuple[int, ...], *tuple[str, ...]],
  |        ^^^^^^----------------^^----------------^
  |              |                 |
  |              |                 Later unpacked variadic tuple
  |              First unpacked variadic tuple
  |

```

```
error[invalid-type-form]: Multiple unpacked variadic tuples are not allowed in a `tuple` specialization
 --> src/mdtest_snippet.py:9:9
  |
9 |     x2: tuple[Unpack[tuple[int, ...]], Unpack[tuple[str, ...]]],
  |         ^^^^^^-----------------------^^-----------------------^
  |               |                        |
  |               |                        Later unpacked variadic tuple
  |               First unpacked variadic tuple
  |

```

```
error[invalid-type-form]: Multiple unpacked variadic tuples are not allowed in a `tuple` specialization
  --> src/mdtest_snippet.py:10:8
   |
10 |     y: tuple[*tuple[int, ...], str, int, *tuple[str, ...]],  # error: [invalid-type-form]
   |        ^^^^^^----------------^^^^^^^^^^^^----------------^
   |              |                           |
   |              |                           Later unpacked variadic tuple
   |              First unpacked variadic tuple
   |

```

```
error[invalid-type-form]: Multiple unpacked variadic tuples are not allowed in a `tuple` specialization
  --> src/mdtest_snippet.py:11:9
   |
11 |     y2: tuple[Unpack[tuple[int, ...]], str, int, Unpack[tuple[str, ...]]],  # error: [invalid-type-form]
   |         ^^^^^^-----------------------^^^^^^^^^^^^-----------------------^
   |               |                                  |
   |               |                                  Later unpacked variadic tuple
   |               First unpacked variadic tuple
   |

```

```
error[invalid-type-form]: Multiple unpacked variadic tuples are not allowed in a `tuple` specialization
  --> src/mdtest_snippet.py:23:6
   |
23 | T1 = tuple[int, *Ts, str, *Ts]  # error: [invalid-type-form]
   |      ^^^^^^^^^^^---^^^^^^^---^
   |                 |         |
   |                 |         Later unpacked variadic tuple
   |                 First unpacked variadic tuple
   |

```

```
error[invalid-type-form]: Multiple unpacked variadic tuples are not allowed in a `tuple` specialization
  --> src/mdtest_snippet.py:27:9
   |
27 |     t6: tuple[*tuple[str, ...], *Ts]  # error: [invalid-type-form]
   |         ^^^^^^----------------^^---^
   |               |                 |
   |               |                 Later unpacked variadic tuple
   |               First unpacked variadic tuple
   |

```
